# bazel-pybind11-protobuf

./: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements.txt
.github/workflows/: amd64_docker_bazel.yml  amd64_docker_cmake.yml  amd64_linux_bazel.yml  amd64_linux_cmake.yml  amd64_macos_bazel.yml  amd64_macos_cmake.yml  amd64_windows_bazel.yml  amd64_windows_cmake.yml
bazel/: BUILD.bazel  Makefile  README.md  requirements.in  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_9.txt
bazel/docker/almalinux/: Dockerfile
bazel/docker/alpine/: Dockerfile
bazel/docker/archlinux/: Dockerfile
bazel/docker/centos/: Dockerfile
bazel/docker/debian/: Dockerfile
bazel/docker/fedora/: Dockerfile
bazel/docker/opensuse/: Dockerfile
bazel/docker/ubuntu/: Dockerfile
bazel/docs/: docker.dot
bp11/foo/: A.proto  B.proto  BUILD.bazel  C.proto  CMakeLists.txt  foo.cpp  foo.hpp  foo_test.cpp
bp11/foo/python/: BUILD.bazel  CMakeLists.txt  foo.cpp  foo_test.py  status_test.py
cmake/: Makefile  cpp.cmake  deps.cmake  host.CMakeLists.txt  python.cmake
cmake/dependencies/: CMakeLists.txt
cmake/docker/almalinux/: Dockerfile
cmake/docker/alpine/: Dockerfile
cmake/docker/archlinux/: Dockerfile
cmake/docker/centos/: Dockerfile
cmake/docker/debian/: Dockerfile
cmake/docker/fedora/: Dockerfile
cmake/docker/opensuse/: Dockerfile
cmake/docker/rockylinux/: Dockerfile
cmake/docker/ubuntu/: Dockerfile
cmake/docs/: deps.dot
foo/: BUILD.bazel  CMakeLists.txt  foo.cpp  foo_test.cpp
foo/python/: BUILD.bazel  CMakeLists.txt  foo.cpp  foo_test.py
patches/: BUILD.bazel  protobuf-v23.3.patch  pybind11_protobuf.patch
pure_lib/: mylib.py  mylib_test.py
python/: setup.py.in
