load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library")
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

# A.proto
proto_library(
    name = "a_proto",
    srcs = ["A.proto"],
)

cc_proto_library(
    name = "a_cc_proto",
    deps = [":a_proto"],
)

py_proto_library(
    name = "a_py_pb2",
    deps = [":a_proto"],
)

# B.proto
proto_library(
    name = "b_proto",
    srcs = ["B.proto"],
    deps = [
      #"@com_google_protobuf//:duration_proto",
    ],
)

cc_proto_library(
    name = "b_cc_proto",
    deps = [":b_proto"],
)

py_proto_library(
    name = "b_py_pb2",
    deps = [
      ":b_proto",
    ],
)

# C.proto
proto_library(
    name = "c_proto",
    srcs = ["C.proto"],
    deps = [
      ":a_proto",
      ":b_proto",
    ],
)

cc_proto_library(
    name = "c_cc_proto",
    deps = [":c_proto"],
)

py_proto_library(
    name = "c_py_pb2",
    deps = [":c_proto"],
)

cc_library(
    name = "foo",
    srcs = ["foo.cpp"],
    hdrs = ["foo.hpp"],
    #strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
      ":c_cc_proto",
    ],
)

cc_test(
    name = "foo_test",
    srcs = ["foo_test.cpp"],
    #copts = ["-Iexternal/gtest/include"],
    deps = [
        ":foo",
        "@com_google_googletest//:gtest_main",
    ],
)
