# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "pyfoo",
    srcs = ["foo.cpp"],
    deps = [
        "//foo:foo",
        "@pybind11_protobuf//pybind11_protobuf:native_proto_caster",
    ],
)

py_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.py"],
    python_version = "PY3",
    deps = [":pyfoo"],
    tags = ["unit"],
)
