# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@pip_deps//:requirements.bzl", "requirement")

pybind_extension(
    name = "pyfoo",
    srcs = ["foo.cpp"],
    deps = [
        "//bp11/foo:foo",
        "@org_pybind11_abseil//pybind11_abseil:absl_casters",
        "@org_pybind11_abseil//pybind11_abseil:status_casters",
        "@pybind11_protobuf//pybind11_protobuf:native_proto_caster",
    ],
)

py_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.py"],
    deps = [
      ":pyfoo",
      requirement("absl-py"),
      "//bp11/foo:c_py_pb2",
      "@org_pybind11_abseil//pybind11_abseil:status",
    ],
    imports = [
      "../../../../org_pybind11_abseil",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
    tags = ["unit"],
)

py_test(
    name = "status_test",
    size = "small",
    srcs = ["status_test.py"],
    deps = [
      requirement("absl-py"),
      "@org_pybind11_abseil//pybind11_abseil:status",
    ],
    imports = [
      "../../../../org_pybind11_abseil",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
)
